добавлены обсуждения и тесты сервисов